Fixed color picker on safari

--- a/style/css/app.css
+++ b/style/css/app.css
@@ -2758,9 +2758,6 @@ table.paramsTable tr.header {
   color: white;
   text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.2);
 }
-table.paramsTable .color-preview {
-  color: transparent;
-}
 table.paramsTable .param-color-preview {
   cursor: pointer;
   -webkit-appearance: none;
@@ -2773,6 +2770,7 @@ table.paramsTable .param-color-preview {
   margin: 10px 0 0 0px;
   border: 1px solid rgba(0, 0, 0, 0.8);
   border-radius: 3px;
+  color: transparent;
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.4);
   -ms-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.4);
