--- a/style/src/_params.scss
+++ b/style/src/_params.scss
@@ -67,10 +67,6 @@ table.paramsTable {
         text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.2);
     }
 
-    .color-preview {
-        color: transparent;
-    }
-
     .param-color-preview {
         cursor: pointer;
         @include prefixProperty(appearance, none);
@@ -79,6 +75,7 @@ table.paramsTable {
         margin: 10px 0 0 0px;
         border: 1px solid rgba(0,0,0,.8);
         border-radius: 3px;
+        color: transparent;
         @include prefixProperty(box-shadow, inset 0 1px 2px rgba(0, 0, 0, 0.4));
     }
 
